# wd2duckdb

./: Cargo.toml
src/: main.rs
wikidata-rs/: Cargo.toml
