[package]
name = "wd2duckdb"
version = "0.0.1"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Transform a Wikidata JSON dump into an DuckDB database"
repository = "https://github.com/angelip2303/wd2duckdb"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["wikidata", "duckdb", "json", "dump", "database"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
wikidata-rs = { version="0.0.4", path="wikidata-rs" }
clap = { version = "4.5.20", features = ["derive"] }
humantime = "2.1.0"
duckdb = { version="1.1.1", features = ["chrono", "bundled"] }
chrono = "0.4.38"
simd-json = "0.14.2"
wikidata = "1.1.0"
polars-arrow = "0.44.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"