[package]
name = "wikidata-rs"
version = "0.0.4"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Utilities for working with Wikidata entities programmatically"
repository = "https://github.com/angelip2303/wd2duckdb"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["wikidata", "duckdb", "json", "dump", "database"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
duckdb = { version="1.1.1", features = ["chrono", "bundled"] }
chrono = "0.4.38"
lazy_static = "1.5.0"
wikidata = "1.1.0"
polars = { version = "0.44.2", features = ["lazy", "dtype-u8"]}
strum = "0.26.3"
strum_macros = "0.26.4"